--- a/Chapter01.ipynb
+++ b/Chapter01.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a0b0525e-6569-4a6a-83a3-0ec3b1a2d48a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import plotly.express as px"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0d3872c6-1c9c-4ec1-b4c1-180ef69c5a63",
    "metadata": {},
@@ -78,7 +66,7 @@
     "    - Speedup doesn't depend only on *parallelizable optimization* but aslo on how fast we data can be accessed and written to the memory *bandwidth limitations*\n",
     "        - the trick is to bypass memory limitations by applying transformations to utilize GPU memories to reduce number of accesses to the DRAM\n",
     "\n",
-    "<img src=\"images/ch013-amdahl-law.png\" width=\"40%\">"
+    "<img src=\"images/ch013-amdahl-law.png\" width=\"45%\">"
    ]
   },
   {
@@ -86,7 +74,7 @@
    "id": "4f05d73b-39c6-45de-89ad-b9cd615ea9d9",
    "metadata": {},
    "source": [
-    "## 1.4 Challenger of programming\n",
+    "## 1.4 Challenges in parallel programming\n",
     "\n",
     "- "
    ]
