book summary, section 1.5

--- a/Chapter01.ipynb
+++ b/Chapter01.ipynb
@@ -76,7 +76,9 @@
    "source": [
     "## 1.4 Challenges in parallel programming\n",
     "\n",
-    "- "
+    "- We wouldn't care about parallel programs if we didn't care about performance! But we do! Future Chapters deal with introducing non-intuitive ways of writing parallel programs\n",
+    "    - Prefix sum, Chapter 11\n",
+    "    - "
    ]
   }
  ],
