--- a/Chapter01.ipynb
+++ b/Chapter01.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## 1.1 Heterogeneous parallel computing\n",
     "\n",
-    "- The industry settled on two not mutually-exclusive trajectories for designing microprocessors ([Hwu et al., 2008](https://www.scopus.com/pages/publications/49549087268)):\n",
+    "- The industry settled on two non mutually-exclusive trajectories for designing microprocessors ([Hwu et al., 2008](https://www.scopus.com/pages/publications/49549087268)):\n",
     "    - *Multicore trajectory* - seeks to maintain the execution speed of sequential programs while moving to multiple cores (eg. Intel's 24 *out-of-order* multicore supporting the full $\\times 86$ instruction set. Or the ARM Ampere w/ 128 multicore)\n",
     "    - *Many-thread trajectory* - focuses on execution throughput of parallel applications (eg. NVIDIA's Tesla 100 GPU w/ many 10k threads executing *in-order* pipelines)\n",
     "- GPUs excel at floating-point operations, being capable of $\\sim 30$ ($\\sim 230$) times more throughput than CPUs at double-precision (single-precision)\n",
@@ -41,10 +41,7 @@
    "source": [
     "## 1.2 Why more speed or parallelism\n",
     "\n",
-    "- Although, many applications run satisfactorily fast today the goal of the processor industry is to keep improving hardware for applications of the future eg. in fields like:\n",
-    "    - Molecular Biology\n",
-    "    - TV/gaming/entertainment\n",
-    "    - Aritificial Intelligence (the most evident one)\n",
+    "- Although, many applications run satisfactorily fast today the goal of the processor industry is to keep improving hardware for applications of the future eg. in fields like: Molecular Biology, TV/gaming/entertainment & Aritificial Intelligence (the most evident one)\n",
     "- The goal of this book summary is to teach programming models that facilitate parallel implementations of data management and delivery (through CUDA)"
    ]
   },
@@ -76,9 +73,26 @@
    "source": [
     "## 1.4 Challenges in parallel programming\n",
     "\n",
-    "- We wouldn't care about parallel programs if we didn't care about performance! But we do! Future Chapters deal with introducing non-intuitive ways of writing parallel programs\n",
-    "    - Prefix sum, Chapter 11\n",
-    "    - "
+    "- We wouldn't care about parallel programs if we didn't care about performance! But we do!\n",
+    "- Future Chapters deal with introducing nonintuitive ways of writing parallel programs, because many solutions are described in terms of *mathematical recurrences*. Some algo primitives are\n",
+    "    - *Prefix sum* - facilitates the conversion of sequential, recursive formulations into a more parallel one (Chapter 11)\n",
+    "    - *Work efficiency* - gives a metric that informs about the tradeoffs or parallelizing programs\n",
+    "    - *Memory-bound (& compute-bound) applications* - which speed is limited by memory access latency and/or throughput (number of instructions performed per byte of data) (Chapters 5, 6)\n",
+    "    - *Input data drawbacks* - irregularities in input data such as variable data sizes and uneven data distributions decrease effectiveness of parallel programs due to uneven amounts of work assigned to threads\n",
+    "    - *Embarassingly parallel* applications can be parallelized with little collaboration between threads. Their opposite are applications that need a lot of collaboration between threads require *synchronization techniques* eg. barriers & atomic operations\n",
+    "- Fortunately most of these challenges have been addressed by researchers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6f279e3-e8ea-4980-bf3e-d031b14bac9f",
+   "metadata": {},
+   "source": [
+    "## 1.5 Related parllel programming interfaces\n",
+    "\n",
+    "- Most significant parallel programming languages and interfaces:\n",
+    "    - **OpenMP ([Open, 2005](https://dl.acm.org/doi/10.1145/1095408.1095421))**\n",
+    "    - **Message Passing Interface ([MPI, 2009](https://www.mpi-forum.org/docs/mpi-2.2/mpi22-report.pdf))**"
    ]
   }
  ],
@@ -98,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
