Progress on chap02 and *.toml files

--- a/Chapter02.ipynb
+++ b/Chapter02.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "- We'll work alongside an example to elaborate on this topic. Lets consider image manipulation, where we handle millions to trillions of pixels\n",
     "    - eg. to convert a colored image to grayscale we need to compute the luminosity to the three channel matrices: $L=0.21r+0.72g+0.07b$, for all $N-1$ pixels: $O[0]=L(I[0](r,g,b)),\\ldots, O[N-1]=L(I[N-1](r,g,b))$\n",
-    "- <div class=\"alert alert-info\"><b>Task Parallelism vs Data Parallelism</b> - in general, the former is the main source of scalability but not the only type of paralellism. The latter also gives room for sqeezing parllelizable performance and a nice detail is the larger the application, the larger the independent tasks present </div>"
+    "- > **Task Parallelism vs Data Parallelism** - in general, the former is the main source of scalability but not the only type of paralellism. The latter also gives room for sqeezing parllelizable performance and a nice detail is the larger the application, the larger the independent tasks present"
    ]
   },
   {
@@ -37,27 +37,78 @@
     "      \n",
     "<img src=\"images/ch022-cuda-program.png\" width=\"60%\">\n",
     "      \n",
-    "- <div class=\"alert alert-info\"><b>Threads</b> - are a simplified view of how a processor executes a sequential program in a coputer. Contains the code of the program, the point in the code that is being executed and the values of its variables and data structures. Threads are sequential, even in CUDA programs, where a program initiates parallel execution by calling kernel functions which launches grids of execution (through its underlying runtime mechanisms)</div>"
+    "- > **Threads** - are a simplified view of how a processor executes a sequential program in a coputer. Contains the code of the program, the point in the code that is being executed and the values of its variables and data structures. Threads are sequential, even in CUDA programs, where a program initiates parallel execution by calling kernel functions which launches grids of execution (through its underlying runtime mechanisms)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "3de87497-8f5a-45e1-896b-446f6f33e13d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2.3 A vector addition kernel\n",
     "\n",
-    "- Lets walk through the \"Hello World\" equivalent example for sequential programming ie. vector addition, check Fig.2.4. *Notation.-* host variables will always have `_h` whereas variables used by the device will have `_d`\n",
+    "- Lets walk through the \"Hello World\" equivalent example for sequential programming ie. vector addition. *Notation.-* host variables will always have `_h` whereas variables used by the device will have `_d`\n",
+    "    - Traditional vector addition (Fig.2.4) we initialize & allocate memory in `main` (skipped) and then compute everything on host; in parallelized vector addition (Fig.2.5) - in Part 1 we allocate memory and copy vectors to device, in Part 2 we launch the grid of threads to compute element-wise addition and in Part 3 we copy C back to host and remove all vectors in device\n",
     "      \n",
-    "<img src=\"images/ch023-trad-vector-sum.png\" width=\"50%\">\n",
+    "<img src=\"images/ch023-vector-sum.png\" width=\"80%\">\n",
     "      \n",
-    "- <div class=\"alert alert-info\"><b>Pointers in C lang</b> - regular (pointer) variables are declared as <code>float V</code> (<code>float *P</code>). We can make P access the value of V w/ <code>P=&V</code>. So the args for <code>vecAdd</code> are pointers that access the i-th element of <code>A_h, B-h, C_h</code></div>"
+    "- > **Pointers in C lang** - regular (pointer) variables are declared as `float V` (`float *P`). We can make `P` access the value of `V` w/ `P=&V`. So the args for `vecAdd` are pointers that access the i-th element of `A_h, B-h, C_h`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74cc5f45-51c3-4390-b340-7457586016ad",
+   "metadata": {},
+   "source": [
+    "## 2.4 Device global memory and data transfer\n",
+    "\n",
+    "- CUDA hardware devices come with its own random-access memory called *device global memory* aka. *global memory* which is different than other memory components of a computer\n",
+    "- We've seen that computing the parallelized version of vector addition kernel (Fig.2.5) requires to transfer objects from the host's memory to global memory and back (and free up memory after computations).\n",
+    "- This is can be done thanks to **CUDA C runtime system** which offers APIs for the programmer to perform these activities eg. two common ones are:\n",
+    "\n",
+    "```c\n",
+    "    cudaError_t cudaMalloc(void **  devPtr, size_t size)\t\t\t\n",
+    "    /* Allocates size bytes of linear memory on the device and returns in *devPtr a pointer to the allocated memory. The allocated memory is suitably aligned for any kind of variable. The memory is not cleared. cudaMalloc() returns cudaErrorMemoryAllocation in case of failure.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    devPtr \t- Pointer to allocated device memory\n",
+    "    size \t- Requested allocation size in bytes\n",
+    "    Returns:\n",
+    "    cudaSuccess, cudaErrorMemoryAllocation */\n",
+    "    \n",
+    "    \n",
+    "    cudaError_t cudaFree(void * devPtr) \t\n",
+    "    /* Frees the memory space pointed to by devPtr, which must have been returned by a previous call to cudaMalloc() or cudaMallocPitch(). Otherwise, or if cudaFree(devPtr) has already been called before, an error is returned. If devPtr is 0, no operation is performed. cudaFree() returns cudaErrorInvalidDevicePointer in case of failure.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    devPtr \t- Device pointer to memory to free\n",
+    "    Returns:\n",
+    "    cudaSuccess, cudaErrorInvalidDevicePointer, cudaErrorInitializationError */\n",
+    "```\n",
+    "\n",
+    "- > CUDA C uses the standard C runtime library `malloc` function to manage the host memory (thus the similarity between `cudaMalloc` and C's `malloc`). Moreover, the fst arg for `cudaMalloc(void **  devPtr, ...)` has a double `**` ie. **address** to a pointer variable which allows to cast **any type** of object to global memory allocation\n",
+    "\n",
+    "```c\t\n",
+    "    cudaError_t cudaMemcpy (void * dst, const void * src, size_t count, enum cudaMemcpyKind kind)\t\t\t\n",
+    "    /*Copies count bytes from the memory area pointed to by src to the memory area pointed to by dst, where kind is one of cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost, or cudaMemcpyDeviceToDevice, and specifies the direction of the copy. The memory areas may not overlap. Calling cudaMemcpy() with dst and src pointers that do not match the direction of the copy results in an undefined behavior.\n",
+    "    \n",
+    "    \n",
+    "    Parameters:\n",
+    "    dst \t- Destination memory address\n",
+    "    src \t- Source memory address\n",
+    "    count \t- Size in bytes to copy\n",
+    "    kind \t- Type of transfer\n",
+    "    Returns:\n",
+    "    cudaSuccess, cudaErrorInvalidValue, cudaErrorInvalidDevicePointer, cudaErrorInvalidMemcpyDirection */\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e78eb30-58cb-460a-9b4a-f97f644b6cbf",
+   "id": "3cf578cf-515e-428f-ad5f-311b63c03a10",
    "metadata": {},
    "outputs": [],
    "source": []
