--- a/Chapter02.ipynb
+++ b/Chapter02.ipynb
@@ -64,54 +64,31 @@
    "source": [
     "## 2.4 Device global memory and data transfer\n",
     "\n",
-    "- CUDA hardware devices come with its own random-access memory called *device global memory* aka. *global memory* which is different than other memory components of a computer\n",
-    "- We've seen that computing the parallelized version of vector addition kernel (Fig.2.5) requires to transfer objects from the host's memory to global memory and back (and free up memory after computations).\n",
-    "- This is can be done thanks to **CUDA C runtime system** which offers APIs for the programmer to perform these activities eg. two common ones are:\n",
+    "- CUDA hardware devices come with its own random-access memory called **device global memory** aka. *global memory* which is different than other memory components of a computer\n",
+    "- We've seen that computing the parallelized version of vector addition kernel (Fig.2.5) requires to perform **data transfers** from the host's memory to global memory and back (and free up memory after computations)\n",
+    "    - This is can be done thanks to **CUDA C runtime system** which offers APIs for the programmer to perform these activities eg. we'll use the ones below for vector addition implementation:\n",
     "\n",
-    "```c\n",
-    "    cudaError_t cudaMalloc(void **  devPtr, size_t size)\t\t\t\n",
-    "    /* Allocates size bytes of linear memory on the device and returns in *devPtr a pointer to the allocated memory. The allocated memory is suitably aligned for any kind of variable. The memory is not cleared. cudaMalloc() returns cudaErrorMemoryAllocation in case of failure.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    devPtr \t- Pointer to allocated device memory\n",
-    "    size \t- Requested allocation size in bytes\n",
-    "    Returns:\n",
-    "    cudaSuccess, cudaErrorMemoryAllocation */\n",
-    "    \n",
-    "    \n",
-    "    cudaError_t cudaFree(void * devPtr) \t\n",
-    "    /* Frees the memory space pointed to by devPtr, which must have been returned by a previous call to cudaMalloc() or cudaMallocPitch(). Otherwise, or if cudaFree(devPtr) has already been called before, an error is returned. If devPtr is 0, no operation is performed. cudaFree() returns cudaErrorInvalidDevicePointer in case of failure.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    devPtr \t- Device pointer to memory to free\n",
-    "    Returns:\n",
-    "    cudaSuccess, cudaErrorInvalidDevicePointer, cudaErrorInitializationError */\n",
-    "```\n",
+    "    - > CUDA C uses the standard C runtime library `malloc` function to manage the host memory (thus the similarity between `cudaMalloc` and C's `malloc`). Moreover, the fst arg for `cudaMalloc(void **  devPtr, ...)` has a double `**` ie. **address** to a pointer variable which allows to cast **any type** of object to global memory allocation\n",
     "\n",
-    "- > CUDA C uses the standard C runtime library `malloc` function to manage the host memory (thus the similarity between `cudaMalloc` and C's `malloc`). Moreover, the fst arg for `cudaMalloc(void **  devPtr, ...)` has a double `**` ie. **address** to a pointer variable which allows to cast **any type** of object to global memory allocation\n",
+    "<img src=\"images/ch024-cuda-functions-vector-sum.png\" width=\"75%\">\n",
     "\n",
-    "```c\t\n",
-    "    cudaError_t cudaMemcpy (void * dst, const void * src, size_t count, enum cudaMemcpyKind kind)\t\t\t\n",
-    "    /*Copies count bytes from the memory area pointed to by src to the memory area pointed to by dst, where kind is one of cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost, or cudaMemcpyDeviceToDevice, and specifies the direction of the copy. The memory areas may not overlap. Calling cudaMemcpy() with dst and src pointers that do not match the direction of the copy results in an undefined behavior.\n",
-    "    \n",
-    "    \n",
-    "    Parameters:\n",
-    "    dst \t- Destination memory address\n",
-    "    src \t- Source memory address\n",
-    "    count \t- Size in bytes to copy\n",
-    "    kind \t- Type of transfer\n",
-    "    Returns:\n",
-    "    cudaSuccess, cudaErrorInvalidValue, cudaErrorInvalidDevicePointer, cudaErrorInvalidMemcpyDirection */\n",
-    "```"
+    "    - Applying these funcions to our vector addition, we now have Parts 1 & 3 of the program completed as seen in Fig.2.8\n",
+    "\n",
+    "<img src=\"images/ch024-vector-sum.png\" width=\"40%\">\n",
+    "\n",
+    "- In summary we must initialize memory allocation in device global memory w/ `cudaMalloc`, then transfer our vectors from host to device using `cudaMemcpy` (note the builtin constants `cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost`) once everything computes we transfer the result back to the host and clear memory in global memory. What's left is to code grids and threads which we'll do in the next Section 2.5\n",
+    "    - > Note that we're omitting error handling in our code blocks"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3cf578cf-515e-428f-ad5f-311b63c03a10",
+   "cell_type": "markdown",
+   "id": "f337bf0b-1919-41ad-9441-642d2e7031b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 2.5 Kernel functions and threading\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
