--- a/Chapter02.ipynb
+++ b/Chapter02.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "<img src=\"images/ch024-cuda-functions-vector-sum.png\" width=\"75%\">\n",
     "\n",
-    "    - Applying these funcions to our vector addition, we now have Parts 1 & 3 of the program completed as seen in Fig.2.8\n",
+    "- Applying these funcions to our vector addition, we now have Parts 1 & 3 of the program completed as seen in Fig.2.8\n",
     "\n",
     "<img src=\"images/ch024-vector-sum.png\" width=\"40%\">\n",
     "\n",
@@ -87,7 +87,9 @@
    "source": [
     "## 2.5 Kernel functions and threading\n",
     "\n",
-    "- "
+    "- A CUDA C kernel function specifies all the code that will be executed by all threads during a parallel phase.\n",
+    "    - CUDA C programming is an instance of the programming style standard **single-program multiple-data (SPMD)** ([Atallah, 1998](https://en.wikipedia.org/wiki/Single_program,_multiple_data))\n",
+    "- The workflows goes as follows: i) a host code executes a kernel instruction which ii) launches"
    ]
   }
  ],
