--- a/Chapter01.ipynb
+++ b/Chapter01.ipynb
@@ -88,11 +88,32 @@
    "id": "e6f279e3-e8ea-4980-bf3e-d031b14bac9f",
    "metadata": {},
    "source": [
-    "## 1.5 Related parllel programming interfaces\n",
+    "## 1.5 Related parallel programming interfaces\n",
     "\n",
     "- Most significant parallel programming languages and interfaces:\n",
-    "    - **OpenMP ([Open, 2005](https://dl.acm.org/doi/10.1145/1095408.1095421))**\n",
-    "    - **Message Passing Interface ([MPI, 2009](https://www.mpi-forum.org/docs/mpi-2.2/mpi22-report.pdf))**"
+    "    - **OpenMP ([Open, 2005](https://dl.acm.org/doi/10.1145/1095408.1095421))** - consists of a compiler and a runtime\n",
+    "        - Its compiler generates parallel code produced by the programmer who specifies directives (commands) and pragmas (hints)\n",
+    "        - The runtime system supports execution of such parallel code orchestrating threads an resources\n",
+    "        - Designed for CPU execution (latter added support for GPU) and offers compiler optimizations and & runtime support that abstracts away parallel programming details\n",
+    "        - Offers **Performance portability** ie. capability of preserving convenience and performance accross different hardware vendors\n",
+    "        - The drawback is that abstraction limits fine-grained control over the processing units\n",
+    "    - **Message Passing Interface ([MPI, 2009](https://www.mpi-forum.org/docs/mpi-2.2/mpi22-report.pdf))** is a programming interface where computing nodes don't share data and any data-sharing activity is done through explicit message passing\n",
+    "        - Became the de-facto standard in High Performance Computing (HPC). Had lots of success eg. modern HPC cluster systems run 100k+ heterogeneous CPU/GPU nodes\n",
+    "        - Porting an application to MPI is very challenging due to the lack of shared memory access accross nodes\n",
+    "        - Programmers have to carry the burden of performing domain decomposition to parition I/O of data accross nodes which implies calling message sending & receiving functions\n",
+    "        - CUDA entered the cluster market w/ multi-GPU support via APIs eg. the NVIDIA Collective Communications Library (NCCL). This extends the benefits of CUDA being an effective interface to a single-GPU node to multi-GPU nodes\n",
+    "        - Modern HPC experts do joint MPI/CUDA programming (Chapter 20)\n",
+    "    - A honorable mention is 2009's joint effort - *Open Compute Language ([OpenCL](https://registry.khronos.org/OpenCL/specs/3.0-unified/html/OpenCL_API.html))* developed by Nvidia, AMD/ATI, Apple and Intel. OpenCL tried to be an open source alternative to parallelize GPU work on single node systems. However, it fell short and CUDA crushed it mainly because it cannot compete with all the CUDA ecosystem without any insights into its closed source competitor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9a54ee2-17c0-4bd4-a098-db07d57f4110",
+   "metadata": {},
+   "source": [
+    "## 1.6 Overarching goals\n",
+    "- To teach how to *program massively parallel processors* w/o extreme depth of hardware knowledge and rather build just basic intuitive understanding\n",
+    "- Wince the core focus is to develop high-performant code we need to remap our thinking for programming with parallelization patterns in mind"
    ]
   }
  ],
@@ -112,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
